force-app/main/default/objects/Visit_Result_Type__c/Visit_Result_Type__c.object-meta.xml
<CustomObject>
    <label>Visit Result Type</label>
    <nameField>
        <displayFormat>VRT-{000000}</displayFormat>
        <label>Visit Result Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Result Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>