force-app/main/default/objects/Visit_Result_Type__c/fields/Visit_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Visit_Result_Code__c</fullName>
    <label>Visit Result Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>