force-app/main/default/objects/Visit_Result_Type__c/fields/Visit_Result_Type_Group__c.field-meta.xml
<CustomField>
    <fullName>Visit_Result_Type_Group__c</fullName>
    <label>Visit Result Type Group</label>
    <referenceTo>Visit_Result_Type_Group__c</referenceTo>
    <relationshipLabel>Visit Result Types</relationshipLabel>
    <relationshipName>Visit_Result_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>